--- a/mobile.html
+++ b/mobile.html
@@ -2512,8 +2512,8 @@
       /* Card premium y clara */
       .product-card { padding: 18px !important; border-width: 1px !important; box-shadow: 0 8px 18px rgba(0,0,0,0.35) !important; }
       .product-image, .product-card img { width: 100% !important; aspect-ratio: 1 / 1 !important; object-fit: cover !important; height: auto !important; }
-      .product-title { font-size: 1.05rem !important; line-height: 1.25 !important; display: -webkit-box !important; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
-      .product-description { color: #d7d3bf !important; line-height: 1.5 !important; display: -webkit-box !important; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; }
+      .product-title { font-size: 1.05rem !important; line-height: 1.25 !important; display: -webkit-box !important; -webkit-line-clamp: 2; line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
+      .product-description { color: #d7d3bf !important; line-height: 1.5 !important; display: -webkit-box !important; -webkit-line-clamp: 3; line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; }
       .product-variants, .variant-select, select { min-height: 44px !important; }
       .product-price { font-size: 1.1rem !important; font-weight: 700 !important; }
       .add-to-cart, .btn, button { min-height: 44px !important; width: 100% !important; }
@@ -2796,7 +2796,7 @@
                         </button>
                     </div>
 
-          <!-- Product 3 - POLI MEDIANO MANO CORAZON -->
+          <!-- Product 3 - POLI MEDIANO MANO CORAZÓN -->
                     <div class="product-card">
             <div class="relative overflow-hidden rounded-xl mb-6 cursor-pointer" ondblclick="openImageModal('assets/productos/3.png', 'POLI MEDIANO MANO CORAZÓN')">
               <img src="assets/productos/3.png" alt="POLI MEDIANO MANO CORAZON" class="product-image">
