--- a/index.html
+++ b/index.html
@@ -2238,6 +2238,42 @@
         box-shadow: 0 8px 18px rgba(212,175,55,0.35);
       }
     }
+
+    /* Mobile polish: compact counters, better header spacing, clearer type */
+    @media (max-width: 768px) {
+      /* Header spacing */
+      .header-content { gap: 10px; }
+      .brand-text h1 { font-size: 1.6rem; }
+      .brand-text p { font-size: 0.8rem; }
+
+      /* Compact counters as badges in one row */
+      .urgency-counters {
+        display: flex;
+        justify-content: center;
+        align-items: stretch;
+        gap: 10px;
+        margin: 18px auto 8px;
+        max-width: 100%;
+        padding: 0 12px;
+      }
+      .counter-item {
+        flex: 1 1 0;
+        min-width: 0;
+        padding: 10px 12px;
+        border-radius: 12px;
+        background: linear-gradient(180deg, rgba(30,30,30,0.95), rgba(18,18,18,0.95));
+        border: 1px solid rgba(212, 175, 55, 0.25);
+        box-shadow: 0 10px 18px rgba(0,0,0,0.35);
+      }
+      .counter-number {
+        font-size: 1.4rem;
+        margin-bottom: 4px;
+      }
+      .counter-label {
+        font-size: 0.8rem;
+        opacity: 0.95;
+      }
+    }
   </style>
 </head>
 <body>
