--- a/mobile.html
+++ b/mobile.html
@@ -1396,4 +1396,5 @@
         });
     </script>
 </body>
-</html>
+</html>< ! - -   U p d a t e d :   0 9 / 1 3 / 2 0 2 5   1 4 : 2 0 : 4 4   - - >  
+ 
