Sistema de detección automática de dispositivos implementado - Nuevo index.html como detector principal que redirige automáticamente - desktop.html (versión PC) y mobile.html (versión móvil) - Agregados todos los productos de Amor y Amistad (productos 2-24) con precios correctos - Actualizado vercel.json para manejar redirecciones - Detección inteligente por User Agent, tamaño de pantalla y capacidades táctiles

--- a/mobile.html
+++ b/mobile.html
@@ -758,6 +758,6 @@
       window.open(`https://api.whatsapp.com/send/?phone=573008220389&text=${message}`, '_blank');
     }
     </script>
-    <!-- Cache-busting: Precios Amor y Amistad corregidos + Baby/Comunión carrito arreglado - 2024-12-19 -->
+    <!-- Cache-busting: Todos los productos de Amor y Amistad agregados (productos 2-24) - 2024-12-19 -->
   </body>
 </html>
